<resources>
    <string name="app_name">AppTravelFinal</string>
    <string name="home_text">หน้าแรก</string>
    <string name="plan_text">วางแผน</string>
    <string name="my_plan_text">แผนของฉัน</string>
    <string name="user_text">ชื่อผู้ใช้</string>
    <string name="login">ลงชื่อเข้าใช้</string>
    <string name="register">สร้างบัญชีผู้ใช้</string>
    <string name="name_plan">ชื่อแผนการท่องเที่ยว</string>
    <string name="province_text">จังหวัด</string>
    <string name="hint_name_plan">กรุณากรอกชื่อแผนการท่องเที่ยว</string>
    <string name="hint_province">แตะเพื่อเลือกจังหวัด</string>
    <string name="day_start_text">วันที่ออกเดินทาง</string>
    <string name="hint_date">แตะเพื่อเลือกวัน</string>
    <string name="budget_text">งบประมาณ</string>
    <string name="hint_budget">กรุณากรอกงบประมาณ</string>
    <string name="cost_accom_text">ราคาที่พัก</string>
    <string name="limit_text">*ไม่เกินที่ระบุ</string>
    <string name="hint_cost_accom">กรุณากรอกราคาสูงสุดของที่พัก</string>
    <string name="meal_text">ราคาอาหาร</string>
    <string name="cost_per_meal_text">*ราคาต่อมื้อ</string>
    <string name="hint_cost_per_meal">กรุณากรอกราคาสูงสุดของอาหารต่อมื้อ</string>
    <string name="add_plan_button">เพิ่มแผน</string>
    <string name="email">อีเมล์</string>
    <string name="password">รหัสผ่าน</string>
    <string name="confirmpassword">ยืนยันรหัสผ่าน</string>
    <string name="back">กลับ</string>
    <string name="done">เรียบร้อย</string>
    <string name="budget_total">งบประมาณ</string>
    <string name="cost_total">ค่าใช้จ่ายรวม</string>
    <string name="bath">บาท</string>
    <string name="plan_topic_text">วางแผนการท่องเที่ยว</string>
    <string name="accom_text">ที่พัก</string>
    <string name="travel_kan">ท่องเที่ยวจังหวัดกาญจนบุรี</string>
    <string name="kan_slogan1">แคว้นโบราณ ด่านเจดีย์ มณีเมืองกาญจน์</string>
    <string name="kan_slogan2">สะพานข้ามแม่น้ำแคว แหล่งแร่น้ำตก</string>
    <string name="tv_calendar">วางแผนได้ล่วงหน้า</string>
    <string name="tv_travel">สนุกกับการเที่ยว</string>
    <string name="tv_news">มาพร้อมข้อมูลใหม่ๆ</string>
    <string name="travel_place_text">สถานที่ท่องเที่ยว</string>
    <string name="restaurant_text">ร้านอาหาร</string>
    <string name="cost_of_restaurant">ราคาอาหารรวม</string>
    <string name="cost_travel_place">ราคาที่ท่องเที่ยงรวม</string>
    <string name="cost_accom_total">ราคาที่พักรวม</string>
    <string name="add_accom_text">เพิ่มที่พัก</string>
    <string name="add_travel_place">เพิ่มสถานที่ท่องเที่ยว</string>
    <string name="logout">ลงชื่อออก</string>
    <string name="exit">ออกจากระบบ</string>
    <string name="cancel">ยกเลิก</string>
    <string name="confirm">ยืนยัน</string>
    <string name="edit">แก้ไข</string>
    <string name="delete">ลบ</string>
    <string name="are_you_sure">เพิ่มแผนการท่องเที่ยว</string>
    <string name="are_you_sure_cancel_plan">แก้ไขแผนการท่องเที่ยว</string>
    <string name="are_you_sure_back_to_choose_day">กลับไปยังหน้าเลือกวันที่</string>
    <string name="choose_day">กรุณาเลือกวันที่ต้องการ</string>
    <string name="add_place_text">เพิ่มสถานที่ท่องเที่ยว</string>
    <string name="add_restaurant_text">เพิ่มร้านอาหาร</string>
    <string name="are_you_sure_delete_plan">ต้องการลบแผนการท่องเที่ยว</string>
    <string name="are_you_sure_edit_plan">แก้ไขแผนเรียบร้อย</string>
    <string name="are_you_sure_done_plan">เพิ่มแผนการท่องเที่ยวเรียบร้อย</string>

    <string-array name="custom_months">
        <item>มกราคม</item>
        <item>กุมภาพันธ์</item>
        <item>มีนาคม</item>
        <item>เมษายน</item>
        <item>พฤษภาคม</item>
        <item>มิถุนายน</item>
        <item>กรกฎาคม</item>
        <item>สิงหาคม</item>
        <item>กันยายน</item>
        <item>ตุลาคม</item>
        <item>พฤศจิกายน</item>
        <item>ธันวาคม</item>
    </string-array>

    //ERROR
    <string name="E01">อีเมล์หรือรหัสผ่านไม่ถูกต้อง</string>
    <string name="E02">กรุณากรอกข้อมูลให้ครบถ้วน</string>
    <string name="E03">เลือกวันที่ไม่ถูกต้อง</string>
    <string name="E04">ยืนยันรหัสผ่านไม่ถูกต้อง</string>
    <string name="E05">กรุณากรอกชื่อผู้ใช้ใหม่</string>
    <string name="E06">กรุณาเลือกที่พักก่อนเป็นอันดับแรก</string>
    <string name="E07">เข้าสู่ระบบล้มเหลว</string>

    <string name="err_loadAccommodation">โหลดข้อมูลที่พักไม่สำเร็จ</string>
    <string name="err_loadPlace">โหลดข้อมูลสถานที่ท่องเที่ยวไม่สำเร็จ</string>
    <string name="err_loadRestaurant">โหลดข้อมูลร้านอาหารไม่สำเร็จ</string>
    <string name="username">ชื่อบัญชีผู้ใช้</string>
    <string name="register_success">สมัครสมาชิกเรียบร้อยแล้ว</string>
    <string name="notFound">ไม่พบข้อมูลที่ท่านต้องการ\nกรุณากำหนดราคาใหม่</string>
    <string name="day_end_text">วันที่เดินทางกลับ</string>
    <string name="my_plan_topic_text">ดูแผนการท่องเที่ยว</string>

    <string name="facebook_app_id">1002251349878825</string>

    <string name="fb_login_protocol_scheme">fb1002251349878825</string>

    <!--zY00cczs2SG28RTn1bZQvsCftvI= key facebook-->

</resources>
