<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/PaddingSpaceM"
    android:background="@android:color/white">

    <TextView
        android:text="@string/name_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView5"
        android:textColor="@color/text_grey" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:id="@+id/editText"
        android:hint="@string/hint_name_plan"
        style="@style/Border_Edittext_Blue" />

    <TextView
        android:text="@string/province_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textColor="@color/text_grey"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/hint_province"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        style="@style/Border_Edittext_Blue"/>

    <TextView
        android:text="@string/day_start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textColor="@color/text_grey"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:id="@+id/space" />

    <TextView
        android:text="@string/day_start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textColor="@color/text_grey"
        android:layout_alignBottom="@+id/space"
        android:layout_toEndOf="@+id/space" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:id="@+id/editText3"
        android:layout_alignEnd="@+id/space"
        android:hint="@string/hint_date"
        style="@style/Border_Edittext_Blue"
        android:layout_marginRight="@dimen/MarginSpaceS" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText4"
        android:hint="@string/hint_date"
        android:layout_below="@+id/textView8"
        android:layout_toEndOf="@+id/space"
        style="@style/Border_Edittext_Blue"/>

    <TextView
        android:text="@string/budget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textColor="@color/text_grey"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText5"
        android:hint="@string/hint_budget"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        style="@style/Border_Edittext_Blue"/>

    <TextView
        android:text="@string/cost_accom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textColor="@color/text_grey"
        android:layout_below="@+id/editText5"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/meal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:textColor="@color/text_grey"
        android:layout_below="@+id/editText6"
        android:layout_alignParentStart="false" />

    <TextView
        android:text="@string/limit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:textColor="@color/red_main"
        android:layout_below="@+id/editText5"
        android:layout_alignParentStart="false"
        android:layout_toRightOf="@+id/textView10"
        android:layout_marginLeft="@dimen/MarginSpaceS" />

    <TextView
        android:text="@string/cost_per_meal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:textColor="@color/red_main"
        android:layout_below="@+id/editText6"
        android:layout_alignParentStart="false"
        android:layout_toRightOf="@+id/textView12"
        android:layout_marginLeft="@dimen/MarginSpaceS" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:id="@+id/editText6"
        android:hint="@string/hint_cost_accom"
        style="@style/Border_Edittext_Blue"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText7"
        android:hint="@string/hint_cost_per_meal"
        android:layout_below="@+id/textView12"
        android:layout_alignParentStart="true"
        style="@style/Border_Edittext_Blue"/>

    <Button
        android:text="@string/add_plan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="@style/Border_Button_Blue"
        android:textSize="@dimen/FontSizeS" />

</RelativeLayout>