<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/logo_app_blue"
        android:src="@drawable/logo_blue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginSpace20dp"
        android:layout_marginBottom="@dimen/marginSpace30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_app_blue">




    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/edText_name"
        android:hint="ชื่อ"
        android:layout_below="@id/logo_app_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/editText_border_blue"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edText_email"
        android:hint="@string/email"
        android:layout_below="@id/edText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/editText_border_blue"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edText_password"
        android:hint="@string/password"
        android:layout_below="@id/edText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/editText_border_blue"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edText_confirmpassword"
        android:hint="@string/confirmpassword"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/editText_border_blue"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/marginSpace20dp"
        android:layout_marginBottom="@dimen/marginSpace30dp"
        android:layout_marginLeft="@dimen/marginSpace30dp"
        android:layout_marginRight="@dimen/marginSpace30dp"
        android:layout_below="@id/edText_confirmpassword"
        android:background="@drawable/border_button_light_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>