<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_back"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageViewBack"
        android:clickable="true" />

    <TextView
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageViewBack"
        android:id="@+id/textViewBack"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/FontSizeS"
        android:layout_alignBottom="@+id/imageViewBack"
        android:gravity="center" />

    <ImageView
        android:id="@+id/imageViewDone"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_done" />

    <TextView
        android:id="@+id/textViewDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageViewDone"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/imageViewDone"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/FontSizeS"
        android:visibility="invisible" />

    <TextView
        android:text="@string/budget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView17"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/FontSizeS"
        android:gravity="center"
        android:padding="@dimen/MarginSpace"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView16"
        android:textAlignment="textStart"
        android:layout_alignParentBottom="true" />

    <TextView
        android:text="@string/bath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView18"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/FontSizeS"
        android:gravity="center"
        android:padding="@dimen/MarginSpace"
        android:textAlignment="textStart"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewBudget"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/FontSizeS"
        android:gravity="center"
        android:padding="@dimen/MarginSpace"
        android:textAlignment="textStart"
        android:layout_alignBaseline="@+id/textView17"
        android:layout_alignBottom="@+id/textView17"
        android:layout_toStartOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDone"
        android:layout_centerHorizontal="true"
        android:text="@string/my_plan_topic_text"
        android:textSize="@dimen/FontSizeS" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView22"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView17"
        android:background="@android:color/white"
        android:id="@+id/list_date" />
</RelativeLayout>