<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_back"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView6"
        android:clickable="true" />

    <TextView
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageView6"
        android:id="@+id/textView14"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/FontSizeS"
        android:layout_alignBottom="@+id/imageView6"
        android:gravity="center" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_done"
        android:id="@+id/imageView7"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/FontSizeS"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/imageView7"
        android:layout_alignBottom="@+id/imageView7" />

    <TextView
        android:text="@string/cost_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/FontSizeS"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:padding="@dimen/MarginSpace"
        android:textAlignment="textStart" />

    <TextView
        android:text="@string/budget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView17"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/FontSizeS"
        android:gravity="center"
        android:padding="@dimen/MarginSpace"
        android:layout_above="@+id/textView16"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView16"
        android:textAlignment="textStart" />

    <TextView
        android:text="@string/bath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView18"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/FontSizeS"
        android:gravity="center"
        android:padding="@dimen/MarginSpace"
        android:textAlignment="textStart"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/bath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView19"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/FontSizeS"
        android:gravity="center"
        android:padding="@dimen/MarginSpace"
        android:textAlignment="textStart"
        android:layout_above="@+id/textView18"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="12000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView20"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/FontSizeS"
        android:gravity="center"
        android:padding="@dimen/MarginSpace"
        android:textAlignment="textStart"
        android:layout_alignBaseline="@+id/textView17"
        android:layout_alignBottom="@+id/textView17"
        android:layout_alignEnd="@+id/textView21" />

    <TextView
        android:text="12000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView21"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/FontSizeS"
        android:gravity="center"
        android:padding="@dimen/MarginSpace"
        android:textAlignment="textStart"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView16"
        android:layout_toStartOf="@+id/imageView7" />

    <TextView
        android:text="@string/plan_topic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView22"
        android:textSize="@dimen/FontSizeS" />

    <TextView
        android:text="@string/budget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView23"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/FontSizeS"
        android:gravity="center"
        android:padding="@dimen/MarginSpace"
        android:layout_above="@+id/textView16"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView16"
        android:textAlignment="textStart" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView22"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView17"
        android:background="@color/grey_unactive" />
</RelativeLayout>