<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_app_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_blue"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/PaddingSpaceM"
        android:paddingBottom="@dimen/PaddingSpaceM" />

    <ImageView
        android:id="@+id/main_content"
        android:src="@drawable/kan_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logo_app_blue"
        android:layout_above="@+id/tv_kan1"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/tv_kan1"
        android:text="@string/travel_kan"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_kan2"
        android:textSize="@dimen/FontSizeS"
        android:padding="@dimen/marginSpace10dp" />

    <TextView
        android:id="@+id/tv_kan2"
        android:text="@string/kan_slogan1"
        android:textSize="@dimen/FontSizeSS"
        android:padding="@dimen/marginSpace5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv_kan3"
        android:text="@string/kan_slogan2"
        android:textSize="@dimen/FontSizeSS"
        android:padding="@dimen/marginSpace5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_kan2"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_below="@id/tv_kan3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="@dimen/marginSpace10dp">

        <RelativeLayout
            android:id="@+id/content_news"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="@dimen/marginSpace5dp">

            <TextView
                android:id="@+id/tv_news"
                android:text="@string/tv_news"
                android:textColor="@android:color/white"
                android:textSize="@dimen/FontSize5S"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_content_bg"/>
            <ImageView
                android:id="@+id/img_news"
                android:src="@drawable/news"
                android:scaleType="centerCrop"
                android:layout_below="@id/tv_news"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/content_calendar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="@dimen/marginSpace5dp" >

            <TextView
                android:id="@+id/tv_calendar"
                android:text="@string/tv_calendar"
                android:textColor="@android:color/white"
                android:textSize="@dimen/FontSize5S"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_content_bg"/>
            <ImageView
                android:id="@+id/img_calendar"
                android:src="@drawable/calendar"
                android:scaleType="centerCrop"
                android:layout_below="@id/tv_calendar"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/content_travel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="@dimen/marginSpace5dp" >

            <TextView
                android:id="@+id/tv_travel"
                android:text="@string/tv_travel"
                android:textColor="@android:color/white"
                android:textSize="@dimen/FontSize5S"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_content_bg"/>
            <ImageView
                android:id="@+id/img_travel"
                android:src="@drawable/travel"
                android:scaleType="centerCrop"
                android:layout_below="@id/tv_travel"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <!--<ImageView
            android:src="@drawable/news"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <ImageView
            android:src="@drawable/calendar"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <ImageView
            android:src="@drawable/travel"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent" />-->

    </LinearLayout>


</RelativeLayout>